# open-table-benchmlops

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yaml
benchmark/: run.py  utils.py
benchmarking/: run.py  settings.py  utils.py
benchmarking/benchmarks/: __init__.py  base.py  ingestion.py  init_ingestion.py  initial_ingestion.py  query_efficiency.py  time_travel.py
benchmarking/benchmarks/queries/: eda.py  feature_engineering.py  training.py
benchmarking/helpers/: generate_transaction_data.py
