[tool.poetry]
name = "open-table-benchmlops"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "benchmarking" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
loguru = "^0.7.2"
click = "^8.1.7"
docker = "^7.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
delta-spark = "^3.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.0"

[tool.ruff]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
